--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1>{{ title }}</h1>
+<app-ui2>
+  <app-nav class="nav"></app-nav>
+  <app-header class="header"></app-header>
+  <app-footer class="footer"></app-footer>
+</app-ui2>
