--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,7 @@
 @import './stylings/fonts';
 @import './stylings/layout';
 @import './stylings/theme';
+
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
