routing lazy loading et preloading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
   <app-nav class="nav"></app-nav>
   <app-header class="header"></app-header>
   <app-footer class="footer"></app-footer>
+  <router-outlet class="content"></router-outlet>
 </app-ui2>
