http and subscribe

--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -1,7 +1,6 @@
 <app-template-fullwidth>
-  <h1 class="header">Clients</h1>
+  <h1 class="header">Orders</h1>
   <ng-container class="body">
     <app-tableau-light></app-tableau-light>
-    <app-icon-edit></app-icon-edit>
   </ng-container>
 </app-template-fullwidth>
