--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -1,6 +1,16 @@
 <app-template-fullwidth>
   <h1 class="header">Orders</h1>
   <ng-container class="body">
-    <app-tableau-light></app-tableau-light>
+    <app-tableau-light [headers]="headers" *ngIf="collection">
+      <tr *ngFor="let item of collection">
+        <td>{{ item.typePresta }}</td>
+        <td>{{ item.client }}</td>
+        <td>{{ item.nbJours }}</td>
+        <td>{{ item.tjmHt | currency }}</td>
+        <td>{{ item.tjmHt | total: item.nbJours | currency }}</td>
+        <td>{{ item.tjmHt | total: item.nbJours: item.tva | currency }}</td>
+        <td>{{ item.state }}</td>
+      </tr>
+    </app-tableau-light>
   </ng-container>
 </app-template-fullwidth>
