--- a/src/app/shared/components/tableau-light/tableau-light.component.html
+++ b/src/app/shared/components/tableau-light/tableau-light.component.html
@@ -1,1 +1,12 @@
-<p>tableau-light works!</p>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col" *ngFor="let item of headers">{{ item }}</th>
+    </tr>
+  </thead>
+  <tbody>
+
+    <ng-content></ng-content>
+
+  </tbody>
+</table>
