--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -1,7 +1,7 @@
 <app-template-fullwidth>
   <h1 class="header">Orders</h1>
   <ng-container class="body">
-    <app-tableau-light [headers]="headers" *ngIf="collection">
+    <app-tableau-light [headers]="headers" *ngIf="collection$ | async as collection">
       <tr *ngFor="let item of collection">
         <td>{{ item.typePresta }}</td>
         <td>{{ item.client }}</td>
