--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -19,5 +19,8 @@
         </td>
       </tr>
     </app-tableau-light>
+
+    <app-btn route="add" label="Add an order"></app-btn>
+
   </ng-container>
 </app-template-fullwidth>
