--- a/src/stylings/_theme.scss
+++ b/src/stylings/_theme.scss
@@ -1,5 +1,6 @@
 :root {
   --app-primary: #0378A6;
+  --app-primary-dark: #046288;
   --app-secondary: #580e75;
 
   --app-dark: #2a2a2a;
@@ -10,4 +11,5 @@
   --app-error: #e2445c;
   --app-warning: #F25C05;
   --app-success: #9EBF6B;
+  --primary: #18ee9c;
 }
