--- a/src/app/orders/pages/page-edit-order/page-edit-order.component.html
+++ b/src/app/orders/pages/page-edit-order/page-edit-order.component.html
@@ -1,1 +1,8 @@
-<p>page-edit-order works!</p>
+<app-template-container>
+  <h1 class="header">Add order</h1>
+  <ng-container class="body">
+
+    <app-form-order *ngIf="item$ | async as item" [init]="item" (submited)="edit($event)"></app-form-order>
+
+  </ng-container>
+</app-template-container>
