--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -3,6 +3,7 @@
   <ng-container class="body">
     <app-tableau-light [headers]="headers" *ngIf="collection$ | async as collection">
       <tr *ngFor="let item of collection">
+        <td><app-icon-edit (click)="goToEdit(item)"></app-icon-edit></td>
         <td>{{ item.typePresta }}</td>
         <td>{{ item.client }}</td>
         <td>{{ item.nbJours }}</td>
