--- a/src/app/ui/ui2/ui2.component.html
+++ b/src/app/ui/ui2/ui2.component.html
@@ -22,6 +22,7 @@
   <div class="page">
 
     <div class="contents">
+      <h1>{{open}}</h1>
       <ng-content select=".content"></ng-content>
     </div>
 
