--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -8,4 +8,7 @@
   <li class="nav-item">
     <a class="nav-link" routerLink="clients" routerLinkActive="active">Clients</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="stats" routerLinkActive="active">Stats</a>
+  </li>
 </ul>
